<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/academia2">

    <Button
        android:id="@+id/btPilates"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#324657"
        android:text="@string/pilates"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btLuta"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#324657"
        android:text="@string/luta"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btPilates" />

    <Button
        android:id="@+id/btTreinos"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#324657"
        android:text="@string/treino"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btLuta" />

    <Button
        android:id="@+id/btVoltar"
        android:layout_width="248dp"
        android:layout_height="60dp"
        android:layout_marginTop="300dp"
        android:backgroundTint="#324657"
        android:text="@string/voltar"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btLuta" />
</androidx.constraintlayout.widget.ConstraintLayout>