<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/musculacao"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btAulas"
        android:layout_width="312dp"
        android:layout_height="57dp"
        android:layout_marginTop="464dp"
        android:backgroundTint="#182533"
        android:text="@string/aulas"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btCadastro"
        android:layout_width="312dp"
        android:layout_height="57dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#182533"
        android:text="@string/cadastro"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btAulas" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="357dp"
        android:layout_height="86dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/amita"
        android:text="Academia Boa Forma"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btVisualizar"
        android:layout_width="312dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#182533"
        android:text="@string/funcionarios"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btCadastro" />

</androidx.constraintlayout.widget.ConstraintLayout>