<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PilatesActivity">

    <ImageView
        android:id="@+id/ivImagem"
        android:layout_width="315dp"
        android:layout_height="543dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:background="@color/cardview_shadow_end_color"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLuta" />

    <Button
        android:id="@+id/btProximo"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/setadireita"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.505" />

    <Button
        android:id="@+id/btAnterior"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/setaesquerda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLuta"
        android:layout_width="394dp"
        android:layout_height="102dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/amaranth"
        android:text="@string/comentarioLuta"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btVoltar"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#324657"
        android:text="@string/voltar"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivImagem"
        app:layout_constraintVertical_bias="0.616" />

    <Button
        android:id="@+id/btCadastro"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#324657"
        android:text="@string/cadastroPilates"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btVoltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivImagem"
        app:layout_constraintVertical_bias="0.53" />
</androidx.constraintlayout.widget.ConstraintLayout>